Prevent horizontal scroll on body

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,6 +9,7 @@
 
 body {
   padding: 3.5rem 0 8rem 0;
+  overflow-x: hidden;
 }
 
 h1,
